<resources>
    <!-- global -->
    <string name="moviedb_api_key">1447c9e70c5784fbe8a492a4d5f37c8b</string>

    <string name="facebook_app_id">610786829108817</string>


    <string name="studio_name">Cross Platform Apps - NMCT</string>
    <string name="developer_name">Hein Jasper Michiel Niels</string>
    <string name="app_name">WatchFriends</string>
    <!-- MainActivity -->
    <string name="title_activity_main">WatchFriends</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- fragments -->
    <string name="title_activity_login">Sign in</string>
    <string name="menu_search_hint">search seriesLists</string>
    <string name="episodeHeaderDescription">episodeHeader</string>
    <string name="air_date_icon_description">airDateIcon</string>
    <string name="overview_icon_description">overviewIcon</string>
    <string name="air_date">Air date: </string>
    <string name="friends_who_watched_this_episode">Friends who watched this episode</string>
    <string name="friends_watched_episode">Friends who watched this episode</string>
    <string name="rating">Rating</string>
    <string name="episodes">Episodes</string>
    <string name="friends_watched_season">Friends who watched this season</string>
    <string name="episode_watched">Episode watched</string>
    <string name="seasons">Seasons</string>
    <string name="friends_watched_series">Friends who watched this series</string>
    <string name="more_info">More info</string>
    <string name="visit">Visit</string>
    <string name="format_season">Season %s</string>
    <string name="similar_series">Similar series</string>
    <string name="icon_description">icon</string>
    <string name="genre">Genre:</string>
    <string name="created_by">Created by:</string>
    <string name="showed_on">Showed on:</string>
    <string name="number_of_seasons">Seasons:</string>
    <string name="number_of_episodes">Episodes:</string>
    <string name="recommended_by_friends">Recommended by friends</string>
    <string name="popular">Popular</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="create_account_link">No account yet? Create one</string>
    <string name="login_link">Already have an account? Login</string>
    <string name="register">Register</string>
    <string name="facebook_login_protocol_scheme">fb610786829108817</string>
    <string name="confirm_password_hint">Confirm password</string>

    <string name="profile_picture">Profile Picture</string>
    <string name="achievements">Achievements</string>
    <string name="watchlist">Watchlist</string>
    <string name="no_similar_series_found">No similar series found</string>
    <string name="no_seasons_available">No seasons available</string>
    <string name="no_episodes_available">No episodes available</string>
    <string name="no_search_results">No search results</string>
    <string name="rating_title">Rating:</string>
    <string name="first_air_date">First air date:</string>
    <string name="missedepisodes">Missed Episodes</string>
    <string name="nextepisodes">Episodes to watch</string>
    <string name="home">Home</string>
    <string name="following">Following</string>
    <string name="to_watch">To Watch</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="upgrade">Upgrade to premium</string>
    <string name="feedback"><![CDATA[Help & feedback]]></string>
    <string name="about">About</string>
    <string name="disableAppBarLayoutBehavior">nmct.jaspernielsmichielhein.watchfriends.helper.DisableAppBarLayoutBehavior</string>
    <string name="lastname_hint">Lastname</string>
    <string name="firstname_hint">Firstname</string>
    <string name="email_hint">Email</string>

</resources>