<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <data>
        <variable
            name="viewmodel"
            type="nmct.jaspernielsmichielhein.watchfriends.viewmodel.SeriesFragmentViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/llAirDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"
                android:contentDescription="@string/icon_description"
                android:src="@drawable/ic_date_range_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@{viewmodel.getSeries().time_period}"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llAirDate"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@{viewmodel.getSeries().name}"
                style="@style/subtitleTextView" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/themeAccent"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llName"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/icon_description"
                android:src="@drawable/ic_info_outline_white_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.getSeries().overview}" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSeasons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llOverview"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/seasons"
                style="@style/subtitleTextView" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/themeAccent"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtNoSeasons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_seasons_available"
            android:layout_below="@id/llSeasons"
            android:layout_marginBottom="5dp"
            android:visibility="gone"/>

        <ListView
            android:id="@+id/lvSeasons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/txtNoSeasons"
            android:layout_marginBottom="10dp"
            app:items="@{viewmodel}" >

        </ListView>

        <LinearLayout
            android:id="@+id/llInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lvSeasons"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/more_info"
                style="@style/subtitleTextView" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/themeAccent"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llInfo"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:contentDescription="@string/icon_description"
                    android:src="@drawable/ic_bookmark_border_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/genre"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:text="@{viewmodel.getSeries().all_genres}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:contentDescription="@string/icon_description"
                    android:src="@drawable/ic_face_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/created_by"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:text="@{viewmodel.getSeries().all_creators}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:contentDescription="@string/icon_description"
                    android:src="@drawable/ic_tv_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/showed_on"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:text="@{viewmodel.getSeries().showed_on}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:contentDescription="@string/icon_description"
                    android:src="@drawable/ic_repeat_one_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/number_of_seasons"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:text="@{String.valueOf(viewmodel.getSeries().number_of_seasons)}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:contentDescription="@string/icon_description"
                    android:src="@drawable/ic_repeat_one_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/number_of_episodes"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:text="@{String.valueOf(viewmodel.getSeries().number_of_episodes)}" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llDetails"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/rating"
                style="@style/subtitleTextView" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/themeAccent"/>

        </LinearLayout>

        <RatingBar
            android:id="@+id/ratingBarEpisode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/llRating"
            android:layout_marginBottom="10dp"
            android:numStars="5"
            android:rating="@{viewmodel.getSeries().rating}"
            android:scaleX="0.8"
            android:scaleY="0.8"
            style="@style/customRatingBar" />

        <LinearLayout
            android:id="@+id/llWatched"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingBarEpisode"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/friends_watched_series"
                style="@style/subtitleTextView" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/themeAccent"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFriends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llWatched"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSimilar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llFriends"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/similar_series"
                style="@style/subtitleTextView" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/themeAccent"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtNoSimilar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_similar_series_found"
            android:layout_below="@id/llSimilar"
            android:layout_marginBottom="5dp"
            android:visibility="gone"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvSimilar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/txtNoSimilar"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            app:items="@{viewmodel.similarSeries}">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/llVisit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rvSimilar"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/visit"
                style="@style/subtitleTextView" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/themeAccent"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llVisit"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"
                android:contentDescription="@string/icon_description"
                android:src="@drawable/ic_open_in_browser_white_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@{viewmodel.getSeries().homepage}"
                android:autoLink="web" />

        </LinearLayout>

    </RelativeLayout>

</layout>